hard-gists/2301119/run.log
=== Docker Run Log for 2301119 ===
Started at: Mi 29. Okt 13:02:11 CET 2025

[2025-10-29 13:02:12] START: Running container for 2301119
[2025-10-29 13:02:12] SUCCESS: Container 77c9a315842d39fa6dfeb399f76fe0f1d0554555c93a7d914db7d452d53254fe started for 2301119
=== Container logs for 2301119 ===
  File "/snippet.py", line 21
    print "Resetting the Yokogawa WT1600..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2301119 ===
[2025-10-29 13:02:14] INFO: Container 77c9a315842d39fa6dfeb399f76fe0f1d0554555c93a7d914db7d452d53254fe has stopped
